assets/css/input.css
@import "tailwindcss";

@layer utilities {
  body {
    @apply flex;
    @apply flex-col;
    @apply w-screen;
    @apply min-h-screen;
    @apply dark:bg-gray-900;
    @apply dark:text-white;
  }
}

@layer base {
  h1 {
    @apply text-2xl;
    @apply font-bold;
    @apply pt-2;
    @apply pb-2;
  }

  h2 {
    @apply text-xl;
    @apply font-bold;
    @apply pt-2;
    @apply pb-2;
  }

  ul {
    @apply list-disc;
    @apply pl-8;
  }

  pre {
    @apply overflow-x-auto;
    @apply bg-gray-800;
    @apply text-white;
    @apply rounded-lg;
    @apply p-4;
  }

  code {
    @apply bg-gray-800;
    @apply text-white;
    @apply rounded-lg;
    @apply p-1;
  }

  #Projekt a,
  #Impressum a,
  #Datenschutz a {
    @apply hover:underline;
    @apply text-[#0000EE];
  }

  p[aligin=center] {
    @apply content-start;
  }

}

